LESS and CSS up.

--- a/web/themes/contrib/ensemble/less/less/variable-overrides.less
+++ b/web/themes/contrib/ensemble/less/less/variable-overrides.less
@@ -7,3 +7,9 @@
 
 // Set the proper directory for the Bootstrap Glyphicon font.
 @icon-font-path: '../bootstrap/fonts/';
+@red-ensemble: #FF0000;
+@green-ensemble: forestgreen;
+@noir-ensemble: #333333;
+@violet-ensemble: darkviolet;
+@blue-ensemble: midnightblue;
+@fond-ensemble: #FBFCFD;
