page--front.html.twig up to manage leaflet map areas.

--- a/web/themes/contrib/ensemble/less/templates/page--front.html.twig
+++ b/web/themes/contrib/ensemble/less/templates/page--front.html.twig
@@ -1,4 +1,13 @@
-<h2>Ma première carte drupal 8.5</h2>
-<div id="hide-markers">Cacher les marqueurs</div>
-<div id="show-markers">Afficher les marqueurs</div>
-<div id="map" class="map--front"></div>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <h2 class="localisation">Evénements citoyens géolocalisés</h2>
+            <div id="map-legend"></div>
+            <div id="date-markers-legend">
+                <span id="show-markers" class="date-legend">Tous les événements</span>
+            </div>
+            <div id="map" class="map--front"></div>
+        </div>
+
+    </div>
+</div>
