LESS and CSS up.

--- a/web/themes/contrib/ensemble/less/less/global.less
+++ b/web/themes/contrib/ensemble/less/less/global.less
@@ -1,4 +1,8 @@
 body{
   background-color: @fond-ensemble;
-
+}
+/* Moteur de recherche **********/
+#search-block-form {
+  width: 200px;
+  float: right;
 }
