LESS and CSS up.

--- a/web/themes/contrib/ensemble/less/less/global.less
+++ b/web/themes/contrib/ensemble/less/less/global.less
@@ -1,5 +1,10 @@
 body{
   background-color: @fond-ensemble;
+  font-family: arial,sans-serif;
+  p{
+    line-height: 1.5em;
+    font-size: 1.2em;
+  }
 }
 /* Moteur de recherche **********/
 #search-block-form {
