--- a/web/themes/contrib/ensemble/less/less/style.less
+++ b/web/themes/contrib/ensemble/less/less/style.less
@@ -5,4 +5,7 @@
 @import 'overrides';
 @import 'fontello';
 @import 'global';
+@import 'home';
 @import 'map';
+@import 'event';
+@import 'incitation';
