--- a/web/themes/contrib/ensemble/less/less/variable-overrides.less
+++ b/web/themes/contrib/ensemble/less/less/variable-overrides.less
@@ -7,9 +7,10 @@
 
 // Set the proper directory for the Bootstrap Glyphicon font.
 @icon-font-path: '../bootstrap/fonts/';
-@red-ensemble: #FF0000;
-@green-ensemble: forestgreen;
+@red-ensemble: #F40000;
+@green-ensemble: #70A12C;/*#35FF00;*/
 @noir-ensemble: #333333;
 @violet-ensemble: darkviolet;
 @blue-ensemble: midnightblue;
 @fond-ensemble: #FBFCFD;
+@gray-ensemble: #C8C8C8;
