--- a/web/themes/contrib/ensemble/less/less/global.less
+++ b/web/themes/contrib/ensemble/less/less/global.less
@@ -11,3 +11,36 @@ body{
   width: 200px;
   float: right;
 }
+#sticky-headband{
+  background-color: #FFFFFF;
+  div.row {
+    background-color: #FFFFFF;
+    form{
+
+    }
+    #navbar{
+      margin-bottom: 0;
+    }
+    .logo{
+      img{
+        height:130px;
+      }
+    }
+  }
+}
+body:not(.path-frontpage) {
+  .region-content {
+    margin-top: 180px;
+  }
+}
+
+#full-content-header {
+  margin-top: 33px;
+}
+.cartouche-noir {
+  color: white;
+  background: fade(black, 70%);
+  display: inline;
+  box-shadow: 10px 0 0 rgba(0, 0, 0, 0.7), -10px 0 0 rgba(0, 0, 0, 0.7);
+  line-height: 1.3em;
+}
