LESS and CSS up.

--- a/web/themes/contrib/ensemble/less/less/map.less
+++ b/web/themes/contrib/ensemble/less/less/map.less
@@ -54,12 +54,12 @@
 }
 .international{
   &:before {
-    color: @noir-ensemble;
+    color: @black-ensemble;
   }
   &.legend{
     &:before {
       .glyphicon();
-      color: @noir-ensemble;
+      color: @black-ensemble;
       content: "\e878";
       margin-right: 3px;
       text-decoration: none;
