--- a/web/themes/contrib/ensemble/less/less/slideshow.less
+++ b/web/themes/contrib/ensemble/less/less/slideshow.less
@@ -22,6 +22,7 @@
             a {
               display: block;
               text-align: center;
+              color: @white-ensemble;
             }
           }
           .txt-diapo{
@@ -32,7 +33,8 @@
             width: 59%;
             text-transform: uppercase;
             font-weight: 700;
-            p{
+            p,
+            div{
               .cartouche-noir();
               font-size: 1.2em;
               display: inline;
@@ -95,7 +97,7 @@
         }
       }
       .controler{
-        color: @noir-ensemble;
+        color: @black-ensemble;
         cursor: pointer;
         &.controler-selected{
           background: url(../images/bg-white-controler-left.png) no-repeat 0 0;
@@ -103,7 +105,7 @@
           margin-left: -12px;
         }
         a{
-          color: @noir-ensemble;
+          color: @black-ensemble;
           &:hover{
             text-decoration: none;
           }
@@ -144,5 +146,38 @@
     border: 5px solid #fff;
     border-radius: 10px;
     margin-right: 10px;
+    &.controler-selected{
+      background-color: @red-ensemble;
+    }
+  }
+}
+#next-ss,
+#previous-ss {
+  position: absolute;
+  top: 240px;
+  z-index: 2;
+  width: 50px;
+  height: 50px;
+  padding: 5px 0 0 5px;
+  /*border: 5px solid black;
+  border-radius: 30px;*/
+  cursor: pointer;
+}
+#previous-ss {
+  &:before{
+    .glyphicon();
+    content: "\e833";
+    font-size: 4em;
+    color: @red-ensemble;
+    margin-left: -15px;
+  }
+}
+#next-ss {
+  &:before{
+    .glyphicon();
+    content: "\e834";
+    font-size: 4em;
+    color: @red-ensemble;
+    margin-left: 5px;
   }
 }
