--- a/web/themes/contrib/ensemble/less/less/variable-overrides.less
+++ b/web/themes/contrib/ensemble/less/less/variable-overrides.less
@@ -9,8 +9,9 @@
 @icon-font-path: '../bootstrap/fonts/';
 @red-ensemble: #F40000;
 @green-ensemble: #70A12C;/*#35FF00;*/
-@noir-ensemble: #333333;
+@black-ensemble: #333333;
 @violet-ensemble: darkviolet;
 @blue-ensemble: midnightblue;
 @fond-ensemble: #FBFCFD;
 @gray-ensemble: #C8C8C8;
+@white-ensemble: #FFFFFF;
