--- a/web/themes/contrib/ensemble/less/templates/page.html.twig
+++ b/web/themes/contrib/ensemble/less/templates/page.html.twig
@@ -109,16 +109,30 @@
     </div>
     {# Navbar #}
 </div>
-{# Slideshow#}
+{# Full content header#}
     {% if page.full_content_header %}
         <div id="full-content-header">
-        {% block full_content_header %}
-            <div class="row" >
-                {{ page.full_content_header }}
-            </div>
-        {% endblock %}
+            {% block full_content_header %}
+                <div class="row">
+                    {{ page.full_content_header }}
+                </div>
+            {% endblock %}
         </div>
     {% endif %}
+{% if page.slideshow %}
+    <div class="container" id="top-home-ss-incentive">
+        <div class="row">
+            <div class="col-md-8">
+                {{ page.slideshow }}
+            </div>
+            <div class="col-md-4">
+                {% if page.incentive %}
+                    {{ page.incentive }}
+                {% endif %}
+            </div>
+        </div>
+    </div>
+{% endif %}
 {# Main #}
 {% block main %}
     <div role="main" class="main-container {{ container }} js-quickedit-main-content">
