--- a/web/themes/contrib/ensemble/less/less/global.less
+++ b/web/themes/contrib/ensemble/less/less/global.less
@@ -44,3 +44,11 @@ body:not(.path-frontpage) {
   box-shadow: 10px 0 0 rgba(0, 0, 0, 0.7), -10px 0 0 rgba(0, 0, 0, 0.7);
   line-height: 1.3em;
 }
+.link-to-arg{
+  display: block;
+  &:before{
+    .glyphicon();
+    content: "\e858";
+    color: @black-ensemble;
+  }
+}
