--- a/web/themes/contrib/ensemble/less/fontello/css/fontello-codes.css
+++ b/web/themes/contrib/ensemble/less/fontello/css/fontello-codes.css
@@ -87,6 +87,7 @@
 .icon-quote:before { content: '\e855'; } /* '' */
 .icon-quote-second:before { content: '\e856'; } /* '' */
 .icon-quote-first:before { content: '\e857'; } /* '' */
+.icon-cafe:before { content: '\e858'; } /* '' */
 .icon-right-dir-1:before { content: '\e859'; } /* '' */
 .icon-left-dir:before { content: '\e85a'; } /* '' */
 .icon-linkedin-squared:before { content: '\e85c'; } /* '' */
