LESS and CSS up.

--- a/web/themes/contrib/ensemble/less/less/home.less
+++ b/web/themes/contrib/ensemble/less/less/home.less
@@ -1,8 +1,8 @@
 .path-frontpage {
   .field--item{
     img{
-      float: left;
-      margin-right: 20px;
+      /*float: left;*/
+      /*margin-right: 20px;*/
       max-width: 100%;
     }
   }
@@ -31,46 +31,6 @@
       display: block;
     }
 
-  }
-  .event-img-txt-date,
-  .img-txt{
-    img{
-      display: block;
-      clear: both;
-    }
-    border: 2px solid @gray-ensemble;
-    position: relative;
-    height: 350px;
-
-    .field--name-body{
-      position: absolute;
-      bottom: 0;
-      padding: 10px;
-      color: white;
-      background: rgba(0, 0, 0, .8);
-      width: 100%;
-    }
-    .field--name-field-date {
-      position: absolute;
-      top: 0px;
-      padding: 10px;
-      color: white;
-      background: rgba(0, 0, 0, .8);
-    }
-    .field--name-node-link{
-      position: absolute;
-      top: 0px;
-      display: block;
-      z-index: 9999;
-      width: 100%;
-      height: 100%;
-      a{
-        width: 100%;
-        height: 100%;
-        display: block;
-        text-indent: -6000px;
-      }
-    }
   }
 }
 
