--- a/web/themes/contrib/ensemble/less/less/global.less
+++ b/web/themes/contrib/ensemble/less/less/global.less
@@ -1,42 +1,46 @@
-body{
+body {
   background-color: @fond-ensemble;
-  font-family: arial,sans-serif;
-  p{
+  font-family: arial, sans-serif;
+  p {
     line-height: 1.5em;
     font-size: 1.2em;
   }
 }
+
 /* Moteur de recherche **********/
 #search-block-form {
   width: 200px;
   float: right;
 }
-#sticky-headband{
+
+#sticky-headband {
   background-color: #FFFFFF;
   div.row {
     background-color: #FFFFFF;
-    form{
+    form {
 
     }
-    #navbar{
+    #navbar {
       margin-bottom: 0;
     }
-    .logo{
-      img{
+    .logo {
+      img {
         height: 90px;
       }
     }
   }
 }
+
 body:not(.path-frontpage) {
   .region-content {
-    margin-top: 180px;
+    margin-top: 100px;
   }
 }
 
 #full-content-header {
   margin-top: 160px;
 }
+
 .cartouche-noir {
   color: white;
   background: fade(black, 70%);
@@ -44,11 +48,68 @@ body:not(.path-frontpage) {
   box-shadow: 10px 0 0 rgba(0, 0, 0, 0.7), -10px 0 0 rgba(0, 0, 0, 0.7);
   line-height: 1.3em;
 }
-.link-to-arg{
+
+.link-to-arg {
   display: block;
-  &:before{
+  &:before {
     .glyphicon();
     content: "\e858";
     color: @black-ensemble;
+  }
+}
+
+.btn-primary {
+  background-color: @black-ensemble;
+}
+
+.event-img-txt-date,
+.img-txt {
+  img {
+    display: block;
+    clear: both;
+  }
+  border: 2px solid @gray-ensemble;
+  position: relative;
+
+  .field--name-body {
+    position: absolute;
+    bottom: 0;
+    padding: 10px;
+    color: white;
+    background: rgba(0, 0, 0, .8);
+    width: 100%;
+  }
+  .field--name-field-date {
+    position: absolute;
+    top: 0px;
+    padding: 10px;
+    color: white;
+    background: rgba(0, 0, 0, .8);
+  }
+  .field--name-node-link {
+    position: absolute;
+    top: 0px;
+    display: block;
+    z-index: 9999;
+    width: 100%;
+    height: 100%;
+    a {
+      width: 100%;
+      height: 100%;
+      display: block;
+      text-indent: -6000px;
+    }
+  }
+  @media (max-width: @screen-md) and (min-width: 400 px) {
+    border: 0;
+    .field--name-body {
+      width: 400px;
+    }
+  }
+  @media (max-width: 400px) {
+    border: 0;
+    .field--name-body {
+      width: 100%;
+    }
   }
 }
