--- a/web/themes/contrib/ensemble/less/less/incitation.less
+++ b/web/themes/contrib/ensemble/less/less/incitation.less
@@ -5,9 +5,19 @@
     position: absolute;
     z-index: 999;
     right: 0;
-    top: 0px;
+    top: -1px;
     width: 290px;
-    height: 100px;
+    height: 101px;
+    @media (max-width: @screen-md) {
+      position: static;
+      width: auto;
+      height: auto;
+      button{
+        width: 100%;
+        margin: 5px auto;
+        padding: 6px;
+      }
+    }
   }
   @media (max-width: @screen-sm) {
     img {
@@ -27,10 +37,37 @@
         margin-top: 120px;
       }
     }
+    @media (max-width: @screen-md) {
+      background-color: transparent;
+      padding: 0;
+      height: auto;
+      h3{
+        min-height: 30px;
+        margin-top: 20px;
+        &.h3-information {
+          margin-top: -30px;
+        }
+        a{
+          background-color: @black-ensemble;
+          display: block;
+          padding: 5px 20px;
+          border-radius: 5px;
+          width: 80%;
+          margin: 0 auto;
+          text-align: center;
+        }
+      }
+    }
   }
 }
 .under-inci-info {
   color: white;
+  background-color: white;
+  button{
+    width: 200px;
+    margin: 5px 0 5px 45px;
+    padding: 6px;
+  }
   .information {
     color: white;
     &:before {
