LESS and CSS up.

--- a/web/themes/contrib/ensemble/less/less/global.less
+++ b/web/themes/contrib/ensemble/less/less/global.less
@@ -30,10 +30,9 @@ body {
     }
   }
 }
-
 body:not(.path-frontpage) {
-  .region-content {
-    margin-top: 100px;
+  .main-container {
+    margin-top: 160px;
   }
 }
 
