LESS and CSS up.

--- a/web/themes/contrib/ensemble/less/less/map.less
+++ b/web/themes/contrib/ensemble/less/less/map.less
@@ -98,11 +98,13 @@
   }
 }
 .event-short-date{
-  width:38px;
+  width: 80px;
+  text-align: center;
   background-color: #fff;
   font-size: 1.2em;
-  margin-left: 0;
+  margin-left: -20px;
   margin-top: 5px;
+
 }
 #hide-markers,
 #show-markers{
