LESS and CSS up.

--- a/web/themes/contrib/ensemble/less/less/variable-overrides.less
+++ b/web/themes/contrib/ensemble/less/less/variable-overrides.less
@@ -15,3 +15,41 @@
 @fond-ensemble: #FBFCFD;
 @gray-ensemble: #C8C8C8;
 @white-ensemble: #FFFFFF;
+
+/* Titres ******************************/
+.title-regular {
+  font-family: 'Nunito', sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.title-bold {
+  font-family: 'Nunito', sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
+.title-extra-bold {
+  font-family: 'Nunito', sans-serif;
+  font-weight: 800;
+  font-style: normal;
+}
+/* Textes *********************************/
+.txt-regular {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.txt-italic {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  font-style: italic;
+}
+.txt-bold {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 900;
+  font-style: normal;
+}
+.txt-bold-italic {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 900;
+  font-style: italic;
+}
