--- a/web/themes/contrib/ensemble/less/less/global.less
+++ b/web/themes/contrib/ensemble/less/less/global.less
@@ -1,12 +1,11 @@
 body {
   background-color: @fond-ensemble;
-  font-family: arial, sans-serif;
+  .txt-regular();
   p {
     line-height: 1.5em;
     font-size: 1.2em;
   }
 }
-
 /* Moteur de recherche **********/
 #search-block-form {
   width: 200px;
@@ -39,7 +38,9 @@ body:not(.path-frontpage) {
 #full-content-header {
   margin-top: 160px;
 }
-
+.center-block {
+  display: table;
+}
 .cartouche-noir {
   color: white;
   background: fade(black, 70%);
