--- a/web/themes/contrib/ensemble/less/less/variable-overrides.less
+++ b/web/themes/contrib/ensemble/less/less/variable-overrides.less
@@ -7,13 +7,20 @@
 
 // Set the proper directory for the Bootstrap Glyphicon font.
 @icon-font-path: '../bootstrap/fonts/';
-@red-ensemble: #F40000;
-@green-ensemble: #70A12C;/*#35FF00;*/
+@red-ensemble: #E42621;
+@green-ensemble: #70B52C;/*#35FF00;*/
 @black-ensemble: #333333;
 @violet-ensemble: darkviolet;
 @blue-ensemble: midnightblue;
-@fond-ensemble: #FBFCFD;
-@gray-ensemble: #C8C8C8;
+@fond-ensemble: #f4f4f4;/*FBFCFD*/
+
+@gray-ensemble: #CCCCCC;
+@gray-darker-ensemble: #4D4D4D;
+@gray-light-ensemble: #E6E6E6;
+
+@pink-ensemble: #DC316F;
+@yellow-ensemble: #FBB03B;
+
 @white-ensemble: #FFFFFF;
 
 /* Titres ******************************/
