--- a/web/themes/contrib/ensemble/less/less/home.less
+++ b/web/themes/contrib/ensemble/less/less/home.less
@@ -1,36 +1,53 @@
 .path-frontpage {
-  .field--item{
-    img{
+  .field--item {
+    img {
       /*float: left;*/
       /*margin-right: 20px;*/
       max-width: 100%;
     }
   }
-  .event-article-home-title{
-    &.event{
-      a{
-        color: @red-ensemble;
-        &:before{
-          .glyphicon();
-          content:"\e807";
-          color: @red-ensemble;
+  .group-title.same-height-title {
+    position: relative;
+    display: table-cell;
+    width: 100%;
+    vertical-align: bottom;
+    .field--name-node-title {
+      .event-article-home-title {
+        &.event {
+          a {
+            color: @gray-darker-ensemble;
+            .title-bold();
+            font-size: 1.4em;
+            width: 100%;
+            display: block;
+          }
+        }
+        &.article {
+          a {
+            color: @gray-darker-ensemble;
+            .title-bold();
+            font-size: 1.4em;
+          }
         }
       }
     }
-    &.article{
-      a{
-        color: @green-ensemble;
-        &:before{
-          .glyphicon();
-          content:"\e82c";
-          color: @green-ensemble;
-        }
-      }
-    }
-    a{
+
+    a {
       display: block;
     }
 
+  }
+  .home-actu {
+    .title-regular();
+    padding: 20px;
+    text-transform: uppercase;
+    color: #FFF;
+    background-color: @green-ensemble;
+    text-align: center;
+    margin-bottom: 20px;
+  }
+  .feed-icons {
+    display: none;
   }
 }
 
