--- a/web/themes/contrib/ensemble/less/fontello/css/fontello.css
+++ b/web/themes/contrib/ensemble/less/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?18049303');
-  src: url('../font/fontello.eot?18049303#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?18049303') format('woff2'),
-       url('../font/fontello.woff?18049303') format('woff'),
-       url('../font/fontello.ttf?18049303') format('truetype'),
-       url('../font/fontello.svg?18049303#fontello') format('svg');
+  src: url('../font/fontello.eot?70508790');
+  src: url('../font/fontello.eot?70508790#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?70508790') format('woff2'),
+       url('../font/fontello.woff?70508790') format('woff'),
+       url('../font/fontello.ttf?70508790') format('truetype'),
+       url('../font/fontello.svg?70508790#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?18049303#fontello') format('svg');
+    src: url('../font/fontello.svg?70508790#fontello') format('svg');
   }
 }
 */
@@ -146,6 +146,7 @@
 .icon-cafe:before { content: '\e858'; } /* '' */
 .icon-right-dir-1:before { content: '\e859'; } /* '' */
 .icon-left-dir:before { content: '\e85a'; } /* '' */
+.icon-icon-exclamation:before { content: '\e85b'; } /* '' */
 .icon-linkedin-squared:before { content: '\e85c'; } /* '' */
 .icon-linkedin:before { content: '\e85d'; } /* '' */
 .icon-viadeo:before { content: '\e85e'; } /* '' */
@@ -181,6 +182,12 @@
 .icon-thumbs-down:before { content: '\e87c'; } /* '' */
 .icon-heart:before { content: '\e87d'; } /* '' */
 .icon-thumbs-up-1:before { content: '\e87e'; } /* '' */
+.icon-icon-partager:before { content: '\e87f'; } /* '' */
+.icon-icon-partager-noir:before { content: '\e880'; } /* '' */
+.icon-icon-participer:before { content: '\e881'; } /* '' */
+.icon-icon-participer-noir:before { content: '\e882'; } /* '' */
+.icon-icon-sinformer:before { content: '\e883'; } /* '' */
+.icon-icon-sinformer-noir:before { content: '\e884'; } /* '' */
 .icon-heart-broken:before { content: '\f028'; } /* '' */
 .icon-location-4:before { content: '\f031'; } /* '' */
 .icon-blank:before { content: '\f0c8'; } /* '' */
