--- a/web/themes/contrib/ensemble/less/templates/block--system-branding-block.html.twig
+++ b/web/themes/contrib/ensemble/less/templates/block--system-branding-block.html.twig
@@ -16,15 +16,18 @@
  */
 #}
 {% block content %}
-  {% if site_logo %}
-    <a class="logo navbar-btn center-block" href="{{ path('<front>') }}" title="Accueil" rel="home">
-      <img src="{{ site_logo }}" alt="Logo ensemble 34 - retour accueil" />
-    </a>
-  {% endif %}
-  {% if site_name %}
-    <a class="name navbar-brand" href="{{ path('<front>') }}" title="{{ 'Home'|t }}" rel="home">{{ site_name }}</a>
-  {% endif %}
-  {% if site_slogan %}
-    <p class="navbar-text">{{ site_slogan }}</p>
-  {% endif %}
+    {% if site_logo %}
+        <h1>
+            <a class="logo navbar-btn center-block" href="{{ path('<front>') }}" title="Accueil" rel="home">
+                <img src="{{ site_logo }}"
+                     alt="Ensemble 34 - mouvement pour une alternative de gauche, écologiste et solidaire - retour accueil"/>
+            </a>
+        </h1>
+    {% endif %}
+    {% if site_name %}
+        <a class="name navbar-brand" href="{{ path('<front>') }}" title="{{ 'Home'|t }}" rel="home">{{ site_name }}</a>
+    {% endif %}
+    {% if site_slogan %}
+        <p class="navbar-text">{{ site_slogan }}</p>
+    {% endif %}
 {% endblock %}
