--- a/web/themes/contrib/ensemble/less/templates/page.html.twig
+++ b/web/themes/contrib/ensemble/less/templates/page.html.twig
@@ -55,7 +55,7 @@
 <div id="sticky-headband" class="navbar-fixed-top">
     <div class="container">
         <div class="row">
-
+            <div class="icon-search" id="icon-search-sm"></div>
             {% if page.header %}
                 {% block header %}
                     <div class="col-sm-12" role="heading">
@@ -71,7 +71,7 @@
                     {% block navbar %}
                         {% set navbar_classes = [
                         'navbar',
-                        theme.settings.navbar_inverse ? 'navbar-inverse' : 'navbar-default',
+                        theme.settings.navbar_inverse ? 'navbar-inverse' : 'navbar-default navbar-ensemble',
                         theme.settings.navbar_position ? 'navbar-' ~ theme.settings.navbar_position|clean_class : container,
                         ] %}
                         <header{{ navbar_attributes.addClass(navbar_classes) }} id="navbar" role="banner">
@@ -122,10 +122,10 @@
 {% if page.slideshow %}
     <div class="container" id="top-home-ss-incentive">
         <div class="row">
-            <div class="col-md-8">
+            <div class="col-md-9">
                 {{ page.slideshow }}
             </div>
-            <div class="col-md-4">
+            <div class="col-md-3">
                 {% if page.incentive %}
                     {{ page.incentive }}
                 {% endif %}
@@ -190,10 +190,26 @@
     </div>
 {% endblock %}
 
-{% if page.footer %}
+
     {% block footer %}
-        <footer class="footer {{ container }}" role="contentinfo">
-            {{ page.footer }}
+        <footer class="no-gutter footer {{ container }}" role="contentinfo">
+            <div id="top-footer">
+                <div class="row">
+                    <div class="col-md-6">
+                        <img src="/themes/contrib/ensemble/less/images/etiquette-footer-small.png" alt="" id="logo-bottom">
+                        <a href="https://twitter.com/Ensemble_FdG"><div id="twitter-bottom"><span class="sr-only">Twitter Ensemble 34</span></div></a>
+                        <a href="https://www.facebook.com/ga.herault/"><div id="facebook-bottom"><span class="sr-only">Facebook Ensemble 34</span></div></a>
+                    </div>
+                    <div class="col-md-6">
+                        <div id="bottom-base-line">Mouvement pour une alternative de gauche, écologiste et solidaire &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
+                    </div>
+                </div>
+            </div>
+            <div class="menu-footer">
+                {% if page.footer %}
+                    {{ page.footer }}
+                {% endif %}
+            </div>
         </footer>
     {% endblock %}
-{% endif %}
+
