LESS and CSS up.

--- a/web/themes/contrib/ensemble/less/less/global.less
+++ b/web/themes/contrib/ensemble/less/less/global.less
@@ -4,6 +4,13 @@ body {
   p {
     line-height: 1.5em;
     font-size: 1.2em;
+    a {
+      color: @green-link-ensemble;
+      text-decoration: underline;
+      &:hover{
+        color: @gray-darker-ensemble;
+      }
+    }
   }
   .container {
     background-color: white;
