--- a/web/themes/contrib/ensemble/less/less/variable-overrides.less
+++ b/web/themes/contrib/ensemble/less/less/variable-overrides.less
@@ -9,6 +9,8 @@
 @icon-font-path: '../bootstrap/fonts/';
 @red-ensemble: #E42621;
 @green-ensemble: #70B52C;/*#35FF00;*/
+@green-link-ensemble: #00a400;
+
 @black-ensemble: #333333;
 @violet-ensemble: darkviolet;
 @blue-ensemble: midnightblue;
