--- a/web/themes/contrib/ensemble/less/less/event.less
+++ b/web/themes/contrib/ensemble/less/less/event.less
@@ -8,6 +8,37 @@
   .field--name-field-address {
     margin-bottom: 30px;
   }
+  .information {
+    float: left;
+    background-color: transparent;
+    border: 0;
+    margin-bottom: 20px;
+  }
+  .incitation {
+    float: left;
+    background-color: transparent;
+    border: 0;
+    margin-bottom: 20px;
+  }
+  .field--name-field-address {
+    clear: both;
+  }
+  .field--name-field-date {
+    clear: both;
+    &:after {
+      content: '';
+      display: block;
+      clear: both;
+      margin-bottom: 15px;
+    }
+  }
+  .field--name-node-changed-date {
+    clear: both;
+    padding-top: 15px;
+  }
+  .field--name-field-place {
+    margin-top: 30px;
+  }
 }
 
 /* Liste des événements ***********************************************************************************************/
